added camera functionality along with mobilenet tensorflow lite model

--- a/UnderTheHood/app/src/main/res/values/strings.xml
+++ b/UnderTheHood/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
-<resources>
-    <string name="app_name">UnderTheHood</string>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_name">Under the Hood</string>
+    <string name="toggle_camera" tools:ignore="ExtraTranslation">Toggle Camera</string>
+    <string name="detect_object">Detect Object</string>
 </resources>
